--- a/academie/package.json
+++ b/academie/package.json
@@ -1,20 +1,15 @@
 {
   "name": "academie",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-highlight": "^0.11.1",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "0.9.5",
-    "react-syntax-highlight": "^15.3.1"
-  },
-  "devDependencies": {},
+  "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "client": "cd client && yarn start",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+  },
+  "dependencies": {
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.1"
   }
 }
